[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/terminal/Terminal.gd" type="Script" id=2]
[ext_resource path="res://src/terminal/TerminalTheme.tres" type="Theme" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.419608, 0.803922, 0.760784, 1 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[node name="Terminal" type="Control"]
margin_left = 15.4667
margin_top = 1.74036
margin_right = 15.4667
margin_bottom = 1.74036
theme = ExtResource( 4 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
solution = "Significado: genio de la guerra, hombre dispuesto para la lucha, genio del combate."

[node name="Header" type="Panel" parent="."]
margin_right = 600.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSplitContainer" type="HSplitContainer" parent="Header"]
anchor_top = -0.0294118
anchor_bottom = -0.0294118
margin_left = 10.0
margin_right = 590.0
margin_bottom = 41.1765
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelHead" type="Label" parent="Header/HSplitContainer"]
margin_top = 5.0
margin_right = 144.0
margin_bottom = 35.0
custom_colors/font_color = Color( 0.535156, 0.535156, 0.535156, 1 )
text = "UNIX::user()"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelHead2" type="Label" parent="Header/HSplitContainer"]
margin_left = 156.0
margin_top = 5.0
margin_right = 580.0
margin_bottom = 35.0
custom_colors/font_color = Color( 0.533333, 0.533333, 0.533333, 1 )
text = "12/11/10 05:22"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Body" type="Panel" parent="."]
margin_top = 40.0
margin_right = 600.0
margin_bottom = 290.0
rect_pivot_offset = Vector2( 144, 144 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Carot" type="Label" parent="Body"]
margin_left = 15.0
margin_top = 22.0
margin_right = 55.0
margin_bottom = 52.0
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEditRef" type="TextEdit" parent="Body"]
anchor_right = 0.239
margin_left = 36.0
margin_top = 17.0
margin_right = 445.204
margin_bottom = 228.0
custom_styles/read_only = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Significado: genio de la guerra, hombre dispuesto para la lucha, genio del combate."
readonly = true
context_menu_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="Body"]
anchor_right = 0.239
margin_left = 36.0
margin_top = 17.0
margin_right = 445.204
margin_bottom = 228.0
custom_styles/normal = SubResource( 4 )
context_menu_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
autostart = true
[connection signal="text_changed" from="Body/TextEdit" to="." method="_on_TextEdit_text_changed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
